--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,11 +1,16 @@
 
-   .example-full-width {
+   .full-width {
      width: 100%;
    }
 
   .login-form{
    display: block;
    text-align: center;
+  }
+  
+  h1 {
+    text-align: center; 
+    vertical-align: middle;
   }
 
 form{
